fixed contrast inside button for easier accessibility

--- a/app.css
+++ b/app.css
@@ -49,8 +49,8 @@ h2{
 
 button{
   font-family: 'handlee';
-  background-color: #EF9339;
-  color: #FFF;
+  background-color: #ffbe0b;
+  color: #042A2B;
   padding: 5px 10px;
   border-radius: 10px;
   left: 25%;
